<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Idrott - När den är som bäst</string>
    <string name="app_descr">Idrott - När den är som bäst</string>
    <string name="row_id">row_id</string>
    <string name="col_1">col_1</string>
    <string name="date">Datum</string>
    <string name="competition">Tävling</string>
    <string name="rubrik1">Orientering med Skarpnäck OL</string>
    <string name="eventchoice">Tävlingar</string>
    <string name="clubchoice">Klubbanmälningar</string>
    <string name="runnerchoice">Löparanmälningar</string>
    <color name="myColor">#4EEE94</color>
    <color name="myColor2">#2F4F2F</color>
    <color name="myBackgroundColour">#919191</color>
    <color name="myBackgroundColour2">#BDBDBD</color>
    <color name="myInputColour">#BDBDBD</color>
    <color name="myTextColour">#000000</color>
    <string name="myClickHandler">myClickHandler</string>
    <string name="events">Tävlingar</string>
    <string name="noItems">Inga Tävlingar hittade</string>
    <string name="klubbanmalde">Anmälningar för klubb</string>
    <string name="runnerentries">Anmälningar för löpare</string>
    <string name="tavlingrubrik1">Sök tävlingar</string>
    <string name="tavlingrubrik2">Från datum : </string>
    <string name="tavlingrubrik3">Till datum : </string>
    <string name="tavlingrubrik4">Förbund : </string>
    <string name="searchfield5">Internationell tävling</string>
    <string name="searchfield6">Mästerskapstävling</string>
    <string name="searchfield7">Nationell tävling</string>
    <string name="searchfield8">Distriktstävling</string>
    <string name="searchfield9">Närtävling</string>
    <string name="searchfield10">Klubbtävling</string>    
    <string name="eventtypechoice">Tävlingstyper</string>    
    <string name="searchchoice">Sök</string>
    <string name="klubbrubrik1">Anmälningar för klubb</string>
    <string name="klubbrubrik2">Från datum : </string>
    <string name="klubbrubrik3">Till datum : </string>
    <string name="klubbrubrik4">Förbund : </string>
    <string name="klubbrubrik5">Klubb : </string>
    <string name="tavlingsinfo1">"Tävlingsinfo"</string>
    <string name="tavlnamn">"Namn: "</string>
    <string name="tavlarr">"Arr: "</string>
    <string name="tavldatum">"Datum: "</string>    
    <string name="tavlform">"Form: "</string>    
    <string name="tavltyp">"Typ: "</string>    
    <string name="tavldistans">"Distans: "</string>    
    <string name="gpsrubrik">"GPS : "</string>    
    <string name="urlrubrik">"Länk: "</string>    
    <string name="comments">"Kommentarer: "</string>
    <string name="mapIt">Karta</string> 
    <string name="inbjudan">Inbjudan</string> 
    <string name="pm">PM</string> 
    <string name="startlist">Startlista</string> 
    <string name="klanmrubr1">Datum/Klass</string>   
    <string name="klanmrubr2">Tävling/Namn</string>   
    <string name="config">Options</string>   
    <string name="aboutme">Om</string> 
    <string name="ttrubrik1">   Välj tävlingstyp  </string>   
    <string name="ttype1">Mästerskap</string>   
    <string name="ttype2">Nationell</string>   
    <string name="ttype3">Distrikt</string>   
    <string name="ttype4">När</string>   
    <string name="ttype5">Klubb</string>   
    <string name="ttype6">Internationell</string>   
    <string name="ttokbutton">OK</string>   
    <string name="ttcancelbutton">CANCEL</string>   
    <string name="tdrubrik1">   Välj disciplin   </string>   
    <string name="tdtype1">Orientering</string>   
    <string name="tdtype2">MTB-O</string>   
    <string name="tdtype3">Skid-O</string>   
    <string name="tdtype4">Precision</string>   
    <string name="tdummy1">     </string>   
    <string name="forbund">Förbund</string>   
    <string name="club">Klubb</string>   
    <string name="quit">Quit</string>   
    <string name="aboutok">Ok</string>   
    <string name="revision">Version 1.0</string>
    <string name="rev_date">Last update : 2012-04-16</string> 
    <string name="configheading1">Konfiguration</string>
    <string name="configsearchlength">Söklängd (månader):</string>
    <string name="configsearchforbund">Förvald förbund:</string>
    <string name="configsearchclub">Förvald klubb:</string>
    <string name="configsearchclub2">Förvald klubb:</string>
    <string name="configcreatedatabase">Skapa konfiguration</string>
    <string name="configupdateeventor">Hämta Eventor data</string>
    <string name="configsave">Spara</string>
</resources>
