<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/myBackgroundColour"   
    android:textColor="@color/myTextColour"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    <TextView
        android:text="@string/ttrubrik1"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:clickable="false"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/myTextColour">
    </TextView>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/myBackgroundColour"   
        android:textColor="@color/myTextColour"
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <CheckBox 
            android:text="@string/ttype1" 
            android:id="@+id/ttype1" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/ttype2" 
            android:id="@+id/ttype2" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/ttype3" 
            android:id="@+id/ttype3" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/ttype4" 
            android:id="@+id/ttype4" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/ttype5" 
            android:id="@+id/ttype5" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/ttype6" 
            android:id="@+id/ttype6" 
            android:paddingLeft="50dp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@color/myBackgroundColour"   
            android:textColor="@color/myTextColour"
            android:orientation="horizontal"
            android:gravity="center"                 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">
            <Button 
                android:paddingTop="10dp" 
                android:paddingBottom="10dp" 
                android:textStyle="bold" 
                android:text="@string/ttokbutton" 
                android:id="@+id/ttokbutton" 
                android:textSize="16dp" 
                android:layout_gravity="left"
                android:layout_width="wrap_content" 
                android:gravity="center" 
                android:layout_height="wrap_content">
            </Button>
            <Button 
                android:paddingTop="10dp" 
                android:paddingBottom="10dp" 
                android:textStyle="bold" 
                android:text="@string/ttcancelbutton" 
                android:id="@+id/ttcancelbutton" 
                android:textSize="16dp" 
                android:layout_gravity="left" 
                android:layout_width="wrap_content" 
                android:gravity="center" 
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
