<?xml version="1.0" encoding="utf-8"?>
<TableLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:background="@color/myBackgroundColour"   
    android:textColor="@color/myTextColour"
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:shrinkColumns="*"  
    android:stretchColumns="*">  
    <TableRow  
        android:id="@+id/tableRow0"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
         <TextView  
            android:id="@+id/tdummy4"  
            android:text="@string/tdummy1"
            android:paddingTop="20dp" 
            android:textStyle="bold"  
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:gravity="center"  
            android:layout_span="6"
	        android:paddingBottom="20dp"
	        android:clickable="false"
	        android:layout_gravity="center"
	        android:textColor="@color/myTextColour">
        </TextView>        
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow1"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  

        <TextView
            android:id="@+id/ttrubrik1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="1"
            android:clickable="false"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="1dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp"
            android:text="@string/ttrubrik1"
            android:textColor="@color/myTextColour"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" >

        </TextView>  

        <TextView
            android:id="@+id/tdrubrik1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="1"
            android:clickable="false"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="10dp"
            android:text="@string/tdrubrik1"
            android:textColor="@color/myTextColour"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" >

        </TextView>  
        </TableRow>  
    <TableRow  
        android:id="@+id/tableRow2"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
           <CheckBox
            android:id="@+id/ttype1"
            android:text="@string/ttype1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingLeft="50sp">
        </CheckBox>              
           <CheckBox
            android:id="@+id/tdtype1"
            android:text="@string/tdtype1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingLeft="50sp">
        </CheckBox>              
     </TableRow>  
     <TableRow  
        android:id="@+id/tableRow3"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
        
        <CheckBox 
            android:text="@string/ttype2" 
            android:id="@+id/ttype2" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:id="@+id/tdtype2" 
            android:text="@string/tdtype2" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
    </TableRow>  
     <TableRow  
        android:id="@+id/tableRow4"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
        <CheckBox 
            android:text="@string/ttype3" 
            android:id="@+id/ttype3" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/tdtype3" 
            android:id="@+id/tdtype3" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
     </TableRow>  
     <TableRow  
        android:id="@+id/tableRow5"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
        <CheckBox 
            android:text="@string/ttype4" 
            android:id="@+id/ttype4" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
        <CheckBox 
            android:text="@string/tdtype4" 
            android:id="@+id/tdtype4" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
     </TableRow>  
     <TableRow  
        android:id="@+id/tableRow6"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
        <CheckBox 
            android:text="@string/ttype5" 
            android:id="@+id/ttype5" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
         <TextView  
            android:id="@+id/tdummy1"  
            android:text="@string/tdummy1"
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:gravity="center"  
            android:layout_span="6"
	        android:paddingTop="20sp"
	        android:paddingBottom="20sp"
	        android:clickable="false"
	        android:layout_gravity="center"
	        android:textColor="@color/myTextColour">
        </TextView>  
     </TableRow>  
     <TableRow  
        android:id="@+id/tableRow7"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">
        <CheckBox 
            android:text="@string/ttype6" 
            android:id="@+id/ttype6" 
            android:paddingLeft="50sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="true">
        </CheckBox>
         <TextView  
            android:id="@+id/tdummy2"  
            android:text="@string/tdummy1"
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:gravity="center"  
            android:layout_span="6"
	        android:paddingTop="20sp"
	        android:paddingBottom="20sp"
	        android:clickable="false"
	        android:layout_gravity="center"
	        android:textColor="@color/myTextColour">
        </TextView>        
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow8"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
         <TextView  
            android:id="@+id/tdummy3"  
            android:text="@string/tdummy1"
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:gravity="center"  
            android:layout_span="6"
	        android:paddingTop="20sp"
	        android:paddingBottom="20sp"
	        android:clickable="false"
	        android:layout_gravity="center"
	        android:textColor="@color/myTextColour">
        </TextView>        
    </TableRow>  
    <TableRow  
        android:id="@+id/tableRow9"  
        android:layout_height="wrap_content"  
        android:layout_width="match_parent"  
        android:gravity="center_horizontal">  
             <Button 
                android:paddingTop="10sp" 
                android:paddingBottom="10sp" 
                android:paddingLeft="20sp" 
                android:paddingRight="20sp" 
                android:textStyle="bold" 
                android:text="@string/ttokbutton" 
                android:id="@+id/ttokbutton" 
                android:textSize="18sp" 
                android:layout_gravity="center"
                android:layout_width="wrap_content" 
                android:gravity="center" 
                android:layout_height="wrap_content">
            </Button>
            <Button 
                android:paddingTop="10sp" 
                android:paddingBottom="10sp" 
                android:textStyle="bold" 
                android:text="@string/ttcancelbutton" 
                android:id="@+id/ttcancelbutton" 
                android:textSize="18sp" 
                android:layout_gravity="left" 
                android:layout_width="wrap_content" 
                android:gravity="center" 
                android:layout_height="wrap_content">
            </Button>
   </TableRow>     
</TableLayout>
