<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/myBackgroundColour"
    android:orientation="vertical"
    tools:context=".clubentry" >

    <TextView
        android:id="@+id/klubbrubrik1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:gravity="center"
        android:paddingBottom="20sp"
        android:paddingTop="20sp"
        android:text="@string/klubbrubrik1"
        android:textColor="@color/myTextColour"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/myBackgroundColour"
        android:clickable="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/klubbrubrik2"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="left"
            android:paddingBottom="20sp"
            android:text="@string/klubbrubrik2"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/selectFDate"
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:onClick="mySelectFrDateClickHandler"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/myBackgroundColour"
        android:clickable="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/klubbrubrik3"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="20sp"
            android:text="@string/klubbrubrik3"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/selectTDate"
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:onClick="mySelectToDateClickHandler"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/myBackgroundColour"
        android:clickable="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/klubbrubrik4"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:text="@string/klubbrubrik4"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:paddingTop="20sp"
            android:textColor="@color/myTextColour"
            android:textSize="18sp" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/myBackgroundColour"
        android:clickable="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/klubbrubrik5"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10sp"
            android:text="@string/klubbrubrik5"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:paddingTop="20sp"
            android:textColor="@color/myTextColour"
            android:textSize="18sp" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/myBackgroundColour"
        android:clickable="false"
        android:orientation="horizontal"
        android:paddingTop="20sp" >

        <Button
            android:id="@+id/eventtypechoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="myKlubbSearchClickHandler"
            android:text="@string/eventtypechoice"
            android:textSize="18sp"
            android:textColor="@color/myTextColour"           
            android:width="160dip" >
        </Button>

        <Button
            android:id="@+id/searchchoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="myKlubbSearchClickHandler"
            android:text="@string/searchchoice"
            android:textColor="@color/myTextColour"
            android:textSize="18sp"
            android:width="95dip" >
        </Button>
    </LinearLayout>

</LinearLayout>