<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" 
    	android:id="@+id/linearLayout1" 
    	android:orientation="vertical" android:weightSum="1" android:layout_weight="0.11" android:paddingTop="60dp">
        <ImageView android:layout_width="66dp" android:id="@+id/imageView1" android:src="@drawable/icon" android:layout_height="66dp" android:layout_marginLeft="130dp"></ImageView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_weight="0.11" android:orientation="vertical">
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText1" android:text="@string/app_name" android:clickable="false" android:gravity="center_horizontal"></EditText>
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/frameLayout1" android:layout_weight="0.11">
        <EditText android:layout_width="match_parent" android:id="@+id/editText2" android:text="@string/revision" android:clickable="false" android:gravity="center_horizontal" android:layout_height="wrap_content"></EditText>
    </FrameLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_weight="0.11">
        <LinearLayout android:layout_width="wrap_content" android:orientation="horizontal" android:layout_height="match_parent" android:id="@+id/linearLayout4" android:layout_weight="0.03">
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/linearLayout6" android:layout_weight="0.03">
            <Button 
            	android:layout_height="wrap_content" 
            	android:id="@+id/aboutok" 
            	android:text="@string/aboutok" 
            	android:gravity="center_vertical|center_horizontal" 
            	android:layout_width="match_parent"></Button>
        </LinearLayout>
        <LinearLayout 
			android:orientation="horizontal"
        	android:layout_width="wrap_content" 
        	android:layout_height="match_parent" 
        	android:id="@+id/linearLayout7" 
        	android:layout_weight="0.03"></LinearLayout>
    </LinearLayout>
    
</LinearLayout>
